--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,3 +29,8 @@
         @apply min-h-screen;
     }
 }
+
+.bg-stripes-pink {
+   background-image: linear-gradient(135deg,#3b82f680 10%,#0000 0,#0000 50%,#3b82f680 0,#3b82f680 60%,#0000 0,#0000);
+   background-size: 7.07px 7.07px;
+}
