--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 :root {
-	--font-title: "Rozha One";
-    --font-serif: "vollkorn", "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif;
+	// --font-title:"Pacifico", cursive;
+    --font-serif: "Mono", monospace;
     --punctuation-color: rgb(120 113 108);
 }
 
@@ -15,6 +15,10 @@
 .center-horizontal {
     @apply flex items-center;
 }
+
+// p {
+//     font-size: 18px;
+// }
 
 .font-title {
 	font-family: var(--font-title);
@@ -33,4 +37,11 @@
 .bg-stripes-pink {
    background-image: linear-gradient(135deg,#3b82f680 10%,#0000 0,#0000 50%,#3b82f680 0,#3b82f680 60%,#0000 0,#0000);
    background-size: 7.07px 7.07px;
+}
+
+.search-color {
+    background-color: rgb(114 123 117);
+    // color: white;
+    // font-weight: bold;
+    // font-size: 20px;
 }
